<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#040947"
    tools:context=".MainActivity">

    <agalilov.doppler.MySurfaceView
        android:id="@+id/dopplerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:background="#040947"
        app:layout_constraintBottom_toTopOf="@+id/btnStartStop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.50" />

    <Button
        android:id="@+id/btnStartStop"
        android:layout_width="90dp"
        android:layout_height="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editCentralFreq"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/central_freq"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:text="20000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editSoundSpeed"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="148dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/sound_speed_m_s"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:text="343"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="2dp"
        android:text="@string/central_freq"
        app:layout_constraintBottom_toTopOf="@+id/editCentralFreq"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginBottom="2dp"
        android:text="@string/sound_speed_m_s"
        app:layout_constraintBottom_toTopOf="@+id/editSoundSpeed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="280dp"
        android:layout_marginBottom="2dp"
        android:text="@string/rate_samples_s"
        app:layout_constraintBottom_toTopOf="@+id/editSampleRate"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editSampleRate"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="280dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/rate_samples_s"
        android:text="44100"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="412dp"
        android:layout_marginBottom="2dp"
        android:text="@string/fft_wnd_samples"
        app:layout_constraintBottom_toTopOf="@+id/editFFTWindow"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editFFTWindow"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="412dp"
        android:layout_marginBottom="16dp"
        android:text="8192"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxPlayFreq"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="545dp"
        android:layout_marginBottom="16dp"
        android:text="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>